fix some spacing issues

--- a/posts/index.css
+++ b/posts/index.css
@@ -1,3 +1,7 @@
+#comments {
+    margin-bottom: 0;
+}
+
 .comment-container {
     display: flex;
     flex-direction: column;
